Small changes to comply with findBugs plugin suggestions